// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Grid correctly 1`] = `
.emotion-0 {
  margin-top: 0;
  margin-right: auto;
  margin-bottom: 0;
  margin-left: auto;
}

@media (max-width:767px) {
  .emotion-0 {
    width: 100%;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-0 {
    width: 624px;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-0 {
    width: 832px;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-0 {
    width: 1040px;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-0 {
    width: 1248px;
  }
}

@media (min-width:1456px) {
  .emotion-0 {
    width: 1456px;
  }
}

<div>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`renders Grid with Row correctly 1`] = `
.emotion-1 {
  margin-top: 0;
  margin-right: auto;
  margin-bottom: 0;
  margin-left: auto;
}

@media (max-width:767px) {
  .emotion-1 {
    width: 100%;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-1 {
    width: 624px;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-1 {
    width: 832px;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-1 {
    width: 1040px;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-1 {
    width: 1248px;
  }
}

@media (min-width:1456px) {
  .emotion-1 {
    width: 1456px;
  }
}

@media (max-width:767px) {
  .emotion-0 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(8,104px);
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(10,104px);
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(10,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1456px) {
  .emotion-0 {
    display: grid;
    grid-template-columns: repeat(10,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

<div>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-0"
    />
  </div>
</div>
`;

exports[`renders Grid with Row with Columns correctly 1`] = `
.emotion-4 {
  margin-top: 0;
  margin-right: auto;
  margin-bottom: 0;
  margin-left: auto;
}

@media (max-width:767px) {
  .emotion-4 {
    width: 100%;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-4 {
    width: 624px;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-4 {
    width: 832px;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-4 {
    width: 1040px;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-4 {
    width: 1248px;
  }
}

@media (min-width:1456px) {
  .emotion-4 {
    width: 1456px;
  }
}

@media (max-width:767px) {
  .emotion-3 {
    display: block;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-3 {
    display: grid;
    grid-template-columns: repeat(6,104px);
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-3 {
    display: grid;
    grid-template-columns: repeat(8,104px);
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-3 {
    display: grid;
    grid-template-columns: repeat(10,104px);
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-3 {
    display: grid;
    grid-template-columns: repeat(10,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:1456px) {
  .emotion-3 {
    display: grid;
    grid-template-columns: repeat(10,104px);
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-0 {
    grid-column: span 2;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-0 {
    grid-column: span 2;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-0 {
    grid-column: span 2;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-0 {
    grid-column: span 4;
  }
}

@media (min-width:1456px) {
  .emotion-0 {
    grid-column: span 5;
  }
}

<div>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-3"
    >
      <div
        className="emotion-0"
      />
      <div
        className="emotion-0"
      />
      <div
        className="emotion-0"
      />
    </div>
  </div>
</div>
`;

exports[`renders Grid with styles correctly 1`] = `
.emotion-0 {
  margin-top: 0;
  margin-right: auto;
  margin-bottom: 0;
  margin-left: auto;
  width: 100%;
  color: #ccc;
}

@media (max-width:767px) {
  .emotion-0 {
    width: 100%;
  }
}

@media (min-width:768px) and (max-width:831px) {
  .emotion-0 {
    width: 624px;
  }
}

@media (min-width:832px) and (max-width:1039px) {
  .emotion-0 {
    width: 832px;
  }
}

@media (min-width:1040px) and (max-width:1247px) {
  .emotion-0 {
    width: 1040px;
  }
}

@media (min-width:1248px) and (max-width:1455px) {
  .emotion-0 {
    width: 1248px;
  }
}

@media (min-width:1456px) {
  .emotion-0 {
    width: 1456px;
  }
}

<div>
  <div
    className="emotion-0"
  />
</div>
`;
